css sheet added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <img src="ashu.png" alt="ERROR 404">
+    <img src="ashu2.png" alt="ERROR 404">
       <h1>ASHUTOSH KUMAR CHOUDHARY</h1>
       <p><em><strong>open source enthusiast</strong> and a competetive coder</em></p>
       <p><em>DO VISIT MY</em><a href="https://github.com/Ash-KODES"> <strong>GITHUB</strong></a></p>
